--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "arxiv-research-server-mcp",
   "version": "1.0.0",
   "description": "MCP server for searching and managing arXiv papers",
-  "main": "research-server.js",
+  "main": "research-server-streamable-auth.js",
   "type": "module",
   "scripts": {
-    "start": "node research-server.js",
-    "dev": "node --watch research-server.js",
+    "start": "node research-server-streamable-auth.js",
+    "dev": "node --watch research-server-streamable-auth.js",
     "start:streamable": "node research-server-streamable.js",
     "dev:streamable": "node --watch research-server-streamable.js"
   },
